<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow"
    android:gravity="top"
    android:padding="18dp">
    <TextView
        android:id="@+id/phoneHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeadingStyle"
        android:text="@string/phone_verify_text"
        android:textSize="16sp" />

    <View android:layout_width="match_parent"
        android:id="@+id/phoneHeadingSeparator"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/phoneHeading"
        android:background="@color/light_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/phoneHeadingSeparator"
        android:id="@+id/verifyPhoneSubHeading"
        style="@style/SubHeadingStyle"
        android:text="@string/phone_verify_sub_heading"/>

    <com.poolcar.component.PhoneNumberField
        android:layout_marginTop="15dp"
        android:layout_below="@id/verifyPhoneSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberField"></com.poolcar.component.PhoneNumberField>

    <Button
        android:id="@+id/verifySendOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/pc_button"
        android:enabled="true"
        android:text="@string/sendOtp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_below="@id/phoneNumberField"/>

</RelativeLayout>