<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poolcar.activity.AppInitActivity">

    <android.support.constraint.Guideline
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0"
        android:id="@+id/leftGuide"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="1"
        android:id="@+id/rightGuide"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.3"
        android:id="@+id/topComponentGuide"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.9"
        android:id="@+id/bottomComponentGuide"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/leftComponentGuide"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/rightComponentGuide"
        android:orientation="vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="@id/leftGuide"
        app:layout_constraintRight_toRightOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/common"
            android:scaleType="fitXY"
            android:alpha="0.2"/>
    </RelativeLayout>

    <com.poolcar.component.PCEditText
        app:clear_id="userIdClear"
        app:field_id="userId"
        app:hintText="@string/userIDHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/userIdText"
        app:layout_constraintLeft_toLeftOf="@id/leftComponentGuide"
        app:layout_constraintRight_toRightOf="@id/rightComponentGuide"
        app:layout_constraintTop_toBottomOf="@id/topComponentGuide"
         />

    <com.poolcar.component.PCEditText
        app:clear_id="passwordClear"
        app:field_id="password"
        app:hintText="@string/passwordHint"
        app:isPassword="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordText"
        app:layout_constraintLeft_toLeftOf="@id/leftComponentGuide"
        app:layout_constraintRight_toRightOf="@id/rightComponentGuide"
        app:layout_constraintTop_toBottomOf="@id/userIdText"
        />

<Button
    android:layout_width="0dp"
    android:layout_marginTop="20dp"
    android:layout_height="wrap_content"
    android:text="@string/loginButtonText"
    app:layout_constraintLeft_toLeftOf="@id/leftComponentGuide"
    app:layout_constraintRight_toRightOf="@id/rightComponentGuide"
    app:layout_constraintTop_toBottomOf="@id/passwordText"
    android:background="@drawable/pc_button"
    android:textColor="@color/white"
    android:textSize="14sp"
    android:enabled="false"/>


    <Button
        android:id="@+id/googleSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/common_signin_button_text_long"
        app:layout_constraintLeft_toLeftOf="@id/leftComponentGuide"
        app:layout_constraintRight_toRightOf="@id/rightComponentGuide"
        app:layout_constraintBottom_toBottomOf="@id/bottomComponentGuide"/>



</android.support.constraint.ConstraintLayout>