<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OTPFragment">

    <android.support.constraint.Guideline
        android:id="@+id/topGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <android.support.constraint.Guideline
        android:id="@+id/bottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


    <RelativeLayout
        android:id="@+id/otp_fragment_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shadow"
        android:gravity="top"
        android:padding="18dp"
        app:layout_constraintBottom_toTopOf="@id/bottomGuide"
        app:layout_constraintLeft_toRightOf="@id/leftGuide"
        app:layout_constraintRight_toLeftOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@+id/topGuide">

        <TextView
            android:id="@+id/otpVerifyHeading"
            style="@style/HeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verify_header"
            android:textSize="16sp" />

        <View
            android:id="@+id/otpSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/otpVerifyHeading"
            android:layout_marginTop="5dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/otpSubHeading"
            style="@style/SubHeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otpSeparator"
            android:layout_marginTop="10dp"
            android:text="@string/otp_message" />

        <TextView
            android:id="@+id/otpPhoneHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otpSubHeading"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/otp_mobile_heading"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otpPhoneHeading"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="$$MOBILE_NUMBER$$"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/otp1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:maxLines="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_toLeftOf="@id/otp2"
            android:layout_below="@id/mobileNumber"
            android:background="@drawable/dark_text_shadow"/>

        <EditText
            android:id="@+id/otp2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_below="@id/mobileNumber"
            android:layout_toLeftOf="@id/otp3"
            android:background="@drawable/dark_text_shadow"/>

        <EditText
            android:id="@+id/otp3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_below="@id/mobileNumber"
            android:background="@drawable/dark_text_shadow"/>

        <EditText
            android:id="@+id/otp4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:maxLines="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_toRightOf="@id/otp3"
            android:layout_below="@id/mobileNumber"
            android:background="@drawable/dark_text_shadow"/>

        <EditText
            android:id="@+id/otp5"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:maxLines="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_toRightOf="@id/otp4"
            android:layout_below="@id/mobileNumber"
            android:background="@drawable/dark_text_shadow"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>